ASSERTion failure in WebCore::deviceClass() on macCatalyst https://bugs.webkit.org/show_bug.cgi?id=231279

Reviewed by Anders Carlsson.

* platform/ios/Device.cpp:
(WebCore::deviceClass):
Simplify deviceClass(); there's no reason to assert here, callers
should be written to assume they don't know the future. Also, this
has been asserting on macOS for ages...


Canonical link: https://commits.webkit.org/242589@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@283638 268f45cc-cd09-0410-ab3c-d52691b4dbfc